Update WidgetManager. Allow get widget using attr() call

--- a/datatable/ui/untitled.ui
+++ b/datatable/ui/untitled.ui
@@ -93,7 +93,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="searchLineEdit">
+      <widget class="QLineEdit" name="searchInput">
        <property name="minimumSize">
         <size>
          <width>200</width>
