--- a/datatable/ui/dark-table.ui
+++ b/datatable/ui/dark-table.ui
@@ -154,7 +154,7 @@ QPushButton:pressed {
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="searchLineEdit">
+       <widget class="QLineEdit" name="searchInput">
         <property name="minimumSize">
          <size>
           <width>200</width>
