--- a/datatable/ui/dark-table.ui
+++ b/datatable/ui/dark-table.ui
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~                     M""""""""`M            dP
+  ~                     Mmmmmm   .M            88
+  ~                     MMMMP  .MMM  dP    dP  88  .dP   .d8888b.
+  ~                     MMP  .MMMMM  88    88  88888"    88'  `88
+  ~                     M' .MMMMMMM  88.  .88  88  `8b.  88.  .88
+  ~                     M         M  `88888P'  dP   `YP  `88888P'
+  ~                     MMMMMMMMMMM    -*-  Created by Zuko  -*-
+  ~
+  ~                     * * * * * * * * * * * * * * * * * * * * *
+  ~                     * -    - -   F.R.E.E.M.I.N.D   - -    - *
+  ~                     * -  Copyright © 2026 (Z) Programing  - *
+  ~                     *    -  -  All Rights Reserved  -  -    *
+  ~                     * * * * * * * * * * * * * * * * * * * * *
+  -->
+
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
