--- a/datatable/ui/untitled.ui
+++ b/datatable/ui/untitled.ui
@@ -1,20 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~                     M""""""""`M            dP
-  ~                     Mmmmmm   .M            88
-  ~                     MMMMP  .MMM  dP    dP  88  .dP   .d8888b.
-  ~                     MMP  .MMMMM  88    88  88888"    88'  `88
-  ~                     M' .MMMMMMM  88.  .88  88  `8b.  88.  .88
-  ~                     M         M  `88888P'  dP   `YP  `88888P'
-  ~                     MMMMMMMMMMM    -*-  Created by Zuko  -*-
-  ~
-  ~                     * * * * * * * * * * * * * * * * * * * * *
-  ~                     * -    - -   F.R.E.E.M.I.N.D   - -    - *
-  ~                     * -  Copyright © 2026 (Z) Programing  - *
-  ~                     *    -  -  All Rights Reserved  -  -    *
-  ~                     * * * * * * * * * * * * * * * * * * * * *
-  -->
-
 <ui version="4.0">
  <class>DataTable</class>
  <widget class="QWidget" name="DataTable">
@@ -186,6 +170,12 @@ QPushButton:pressed {
    </item>
    <item>
     <widget class="DataTableView" name="tableView">
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::EditTrigger::DoubleClicked</set>
      </property>
@@ -201,8 +191,8 @@ QPushButton:pressed {
      <property name="sortingEnabled">
       <bool>true</bool>
      </property>
-     <attribute name="horizontalHeaderCascadingSectionResizes">
-      <bool>true</bool>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>45</number>
      </attribute>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
