--- a/datatable/ui/untitled.ui
+++ b/datatable/ui/untitled.ui
@@ -2,6 +2,15 @@
 <ui version="4.0">
  <class>DataTable</class>
  <widget class="QWidget" name="DataTable">
+ <property name="styleSheet">
+           <string notr="true">QPushButton:hover {
+    background-color: #3e3e42;
+}
+
+QPushButton:pressed {
+    background-color: #007acc;
+}</string>
+          </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -93,7 +102,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="searchLineEdit">
+      <widget class="QLineEdit" name="searchInput">
        <property name="minimumSize">
         <size>
          <width>200</width>
@@ -309,15 +318,6 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButton">
-          <property name="styleSheet">
-           <string notr="true">QPushButton:hover {
-    background-color: #3e3e42;
-}
-
-QPushButton:pressed {
-    background-color: #007acc;
-}</string>
-          </property>
           <property name="text">
            <string>...</string>
           </property>
